Add minion & make it move & jump

--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<h1>Worms</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset='utf-8' />
+    <title>Worms</title>
+    <link href="https://fonts.googleapis.com/css2?family=Grandstander:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="./dist/style/worms.css">
+    <script type="application/javascript" src="./dist/main.js"></script>
+  </head>
+  <body>
+    <div id="page">
+        <h1 id="title">Worms</h1>
+        <div id="instruction">A - move left, D - move right, W - jump, J - hold to charge and release to fire</div>
+
+        <canvas id="battlefield" width="2400" height="900"></canvas>
+    </div>
+  </body>
+</html>
