--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <body>
     <div id="page">
         <h1 id="title">Worms</h1>
-        <div id="instruction">A - move left, D - move right, W - jump, J - hold to charge and release to fire</div>
-
+        <div id="instruction">A - move left, D - move right, W - jump, J (left) or K (right) - hold to charge and release to fire</div>
         <canvas id="battlefield" width="2400" height="900"></canvas>
     </div>
   </body>
