Some minor changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div id="page">
-        <h1 id="title">Worms</h1>
+        <h1 id="title">Minion V.S. Worms</h1>
         <div id="instruction">A - move left, D - move right, W - jump, J (left) or K (right) - hold to charge and release to fire</div>
         <canvas id="battlefield" width="2400" height="900"></canvas>
     </div>
