Add music & sound controller on and off

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <div id="page">
         <h1 id="title">Minion V.S. Worms</h1>
         <div id="instruction">A - move left, D - move right, W - jump, J (left) or K (right) - hold to charge and release to fire</div>
+        <div id="music-sound-wrapper">
+          <a id="music-controller">Music: On</a>
+          <a id="sound-controller">Sound: On</a>
+        </div>
         <canvas id="battlefield" width="2400" height="900"></canvas>
     </div>
   </body>
