--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
           <a id="sound-controller">Sound: On</a>
         </div>
         <canvas id="battlefield" width="2400" height="900"></canvas>
+        <div id="contact-me">
+          <a href="https://github.com/maggieyao1211" target="_blank">GitHub</a>
+        </div>
     </div>
   </body>
 </html>
