Add icons for github and linkedin links

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Grandstander:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./dist/style/worms.css">
     <script type="application/javascript" src="./dist/main.js"></script>
+    <script
+      src="https://use.fontawesome.com/releases/v5.15.1/js/all.js"
+      data-auto-a11y="true"
+    ></script>
   </head>
   <body>
     <div id="page">
@@ -17,7 +21,8 @@
         </div>
         <canvas id="battlefield" width="2400" height="900"></canvas>
         <div id="contact-me">
-          <a href="https://github.com/maggieyao1211" target="_blank">GitHub</a>
+          <a href="https://github.com/maggieyao1211" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/maggie-y-3860641b7" target="_blank"><i class="fab fa-linkedin"></i></a>
         </div>
     </div>
   </body>
